--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,3 +15,10 @@ div.scrollmenu a {
 div.scrollmenu a:hover {
   background-color: #777;
 }
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
