--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,11 @@ div.scrollmenu a:hover {
   background-color: #777;
 }
 
+div.ngdao {
+  background-color: #d5e1df;
+  
+}
+
 .logo {
   display: block;
   margin-left: auto;
