--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,7 @@ div.scrollmenu a:hover {
   background-color: #777;
 }
 
-.ngdao {
+div.ngdao {
   background-color: #d5e1df;
   margin-bottom: 2px;
   padding: 3px;
