--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,7 @@ div.scrollmenu a:hover {
 }
 
 div.ngdao {
+  border-radius: 10px;
   background-color: #d5e1df;
   margin-bottom: 2px;
   padding-top: 2px;
