--- a/_layouts/ngdao.html
+++ b/_layouts/ngdao.html
@@ -4,6 +4,7 @@ theme: jekyll-theme-cayman
 <article class="ngdao">
 
   <h1>ngDAO: {{ page.nombre }}</h1>
+  <h2>Blockchain: {{ page.blockchain }}</h2>
 
   <div>
     {{ content }}
