--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
       <a href="/blog.html">Blog</a>
     </div>
     <h1>{{ page.title }}</h1>
+    <h3><i>{{ page.description }}</i></h3>
     <section>
       {{ content }}
     </section>
