--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
+body {
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: verdana;
+}
+
 div.scrollmenu {
   background-color: #333;
   overflow: auto;
