--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,10 @@
+<hr>
 
+</h2>¿Cómo ayudar?</h2>
+
+<ul>
+  <li>Habla sobre nosotros</li>
+  <li>Colabora con las DAOs que aparecen en el listado de ngDAOs</li>
+  <li>Entra en la sección colaborar</li>
+  <li>Donar fondos a 0x1f05a8870514dbda34a55328c42ed0a7ea46db15 en la blockchain Polygon</li>
+</ul>
