--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <html lang="es">
   {% include head.html %}
   <body>
-    <div style="background-image: url("/assets/images/world-5282456_1280.jpg");">
+    <p style="background-image: url("/assets/images/world-5282456_1280.jpg");">
       <img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
-    </div>
+    </p>
     <link rel="stylesheet" href="/assets/css/styles.css">
     {% include menu.html %}
     <h1>{{ page.title }}</h1>
