--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <body>
     <p style="background-image: url("/assets/images/world-5282456_1280.jpg");">
       <img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
+      <img src="/assets/images/world-5282456_1280.jpg" class="logo" alt="ngDAO logo">
     </p>
     <link rel="stylesheet" href="/assets/css/styles.css">
     {% include menu.html %}
