--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,9 @@
 <html lang="es">
   {% include head.html %}
   <body>
-    <p style="background-image: url("/assets/images/world-5282456_1280.jpg");">
+    <div class="p-3 mb-2 bg-secondary">
       <img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
-      <img src="/assets/images/world-5282456_1280.jpg" class="logo" alt="ngDAO logo">
-    </p>
+    </div>
     <link rel="stylesheet" href="/assets/css/styles.css">
     {% include menu.html %}
     <h1>{{ page.title }}</h1>
