--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
-<!doctype html>
+l<!doctype html>
 <html lang="es">
   {% include head.html %}
   <body>
-    <div class="p-3 mb-2 bg-secondary">
+    <div class="p-3 mb-2 bg-teal">
       <img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
     </div>
     <link rel="stylesheet" href="/assets/css/styles.css">
