--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@ l<!doctype html>
 <html lang="es">
   {% include head.html %}
   <body>
-    <div class="p-3 mb-2 bg-teal">
+    <div class="p-3 mb-2 bg-darken-2">
       <img src="/assets/images/ngDAOlogo9.png" class="logo" alt="ngDAO logo">
     </div>
     <link rel="stylesheet" href="/assets/css/styles.css">
