--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <hr>
-Visítanos también en [Giveth](https://giveth.io/project/ngdao)
+Visítanos también en <a href="https://giveth.io/project/ngdao">Giveth</a>
 
 </h2>¿Cómo ayudar?</h2>
 
